--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.pokedex {
+  display: flex; 
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@media only screen and (max-width: 690px){
+	.pokecard {
+		top: 5%;
+	}
+
+	h2, h3, h4 {
+		font-size: 0.10em;
+	}
+
+	.close {
+		padding: 10px;
+	}
+
+	.pokedexBtn {
+		top: 10%;
+		width: 50px;
+		height: 50px;
+	}
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 450px) {
+  img {
+    height: 50px;
+    width: 50px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .guessingDiv {
+  	margin-top: 30%;
   }
 }
